--- a/src/styles/section.css
+++ b/src/styles/section.css
@@ -13,7 +13,7 @@
 
 #s{
     font-size: calc(0.8rem + 0.8vw);
-    font-family: 'Montserrat';
+    font-family: 'Exo';
     color: #be911f;
     font-weight: 600;
 
