--- a/src/styles/Conland.css
+++ b/src/styles/Conland.css
@@ -10,7 +10,7 @@
     background-color: rgb(231, 227, 227);
     color: black;
     border: 1px;
-    padding: 10px;
+    /* padding: 10px; */
     margin-top: 3%;
     margin-bottom: 3%;
 }
@@ -51,14 +51,39 @@
     text-align: left;
     padding-left: 10px;
     margin-top: 20px;
-    line-height: 40px;
-    font-size-adjust: inherit;
-    font-size: medium;
+    line-height: 25px;
+    /* font-size-adjust: inherit; */
+    font-size: 13px;
+    font-family: Exo;
+    float: left;
 }
 
-#para2{
+/* #para2{
     margin-bottom: 55px;
+} */
+
+#csbt,#csbt1{
+    color: #fff;
+    background-color:#0e4d3b;
+    /* width: 35%; */
+    box-sizing: inherit;
+    margin-top: 20px;
+    margin-bottom: -40px;
+    height: 40px;
+    border-radius: -1px;
+    text-decoration: none;
+    /* height: 60px; */
+    font-size: medium;
+    font-family:Exo;
+    /* float:right; */
+    /* margin-top: 90px; */
+    /* margin-right: -1.5%; */
 }
+
+#csbt1{
+    margin-top: 45px
+}
+
 
 #bt4{
     color: #fff;
@@ -79,12 +104,13 @@
     color:#0a382b;
     margin-bottom: 0;
     font-family: Oswald;
+    font-size: 25px;
     /* height: 38px; */
     /* width: 24px; */
 }
 
 .container5{
     /* background-color: aliceblue; */
-    margin-left: 6%;
-    margin-right: 6%;
+    margin-left: 16%;
+    margin-right: 16%;
 }
