--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -38,8 +38,7 @@ text-align: center;
 padding: 12px 23px;
 text-decoration: none;
 font-family: Montserrat;
-
-font-size: 16px;
+font-size: 14px;
 
 }
 
@@ -55,7 +54,7 @@ display: inline-block;
 display: none;
 position: absolute;
 background-color: #f9f9f9;
-min-width: 204px;
+min-width: 184px;
 box-shadow: 0px 8px 16px 0px rgba(238, 235, 235, 0.2);
 z-index: 1;
 font-size: medium;
@@ -70,12 +69,17 @@ display: block;
 text-align: left;
 font-family: 'Exo';
 background-color: white;
+font-weight: 600;
 }
 
 .dropdown-content a:hover {background-color: #f1f1f1;}
 
 .dropdown:hover .dropdown-content {
 display: block;
+}
+
+#rks{
+  text-decoration: none;
 }
 
 .button {
