--- a/src/styles/PlandSi.css
+++ b/src/styles/PlandSi.css
@@ -56,6 +56,8 @@
     /* width: 100%; */
     box-sizing: border-box;
     border-radius: 5px;
+    border: none;
+    box-shadow: 1px 1px 1px black;
     /* height: 50px; */
     font-size: 19px;
     font-family:Exo;
@@ -103,11 +105,15 @@
     margin-bottom: 5%;
 }
 
+#accCon{
+    font-family: Montserrat;
+}
+
 #hd11{
 
     text-align: center;
     color: #be911f;
-    font-family: Montserrat;
+    font-family: Exo;
 }
 
 .container4{
