--- a/src/styles/Conland.css
+++ b/src/styles/Conland.css
@@ -67,8 +67,10 @@
     background-color:#0e4d3b;
     /* width: 35%; */
     box-sizing: inherit;
+    border: none;
+    box-shadow: 1px 1px 1px black;
     margin-top: 20px;
-    margin-bottom: -40px;
+    margin-bottom: -8px;
     height: 40px;
     border-radius: -1px;
     text-decoration: none;
@@ -84,6 +86,25 @@
     margin-top: 45px
 }
 
+#k4r{
+    margin-left: 500px;
+    margin-top: 50px;
+    font-family: Exo;
+    font-size: 14px;
+}
+
+#desc{
+    width: 100%;
+    padding: 15px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 3px solid rgb(247, 243, 243);
+    border-radius: 8px;
+    font-family: Montserrat;
+    box-sizing: border-box;
+    box-shadow:0 0 15px 4px rgba(0,0,0,0.06);
+    height: 150px
+}
 
 #bt4{
     color: #fff;
