--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -19,8 +19,15 @@
  }
 
 #middle{
-font-family: MONTSERRAT;
+font-family:"Montserrat";
 font-size: small;
+font-weight: 500;
+letter-spacing: 1px;
+}
+
+#gvbt{
+  letter-spacing: 1px;
+  font-size: 13px;
 }
 
 li {
@@ -38,6 +45,7 @@ text-align: center;
 padding: 12px 23px;
 text-decoration: none;
 font-family: Montserrat;
+letter-spacing: 1px;
 font-size: 14px;
 
 }
@@ -54,7 +62,7 @@ display: inline-block;
 display: none;
 position: absolute;
 background-color: #f9f9f9;
-min-width: 184px;
+min-width: 180px;
 box-shadow: 0px 8px 16px 0px rgba(238, 235, 235, 0.2);
 z-index: 1;
 font-size: medium;
@@ -69,7 +77,8 @@ display: block;
 text-align: left;
 font-family: 'Exo';
 background-color: white;
-font-weight: 600;
+font-weight: 500;
+font-size: 16px;
 }
 
 .dropdown-content a:hover {background-color: #f1f1f1;}
@@ -205,7 +214,7 @@ ul {
   list-style: none;
   text-decoration: none;
   display: inline-block;
-  font-family:Exo;
+  font-family:Montserrat;
   /* font-size: 12px; */
   justify-content: space-around;
   
@@ -227,7 +236,8 @@ ul a:hover{
 .active{
   background-color:transparent;
   color: #947200;
-  font-family:Exo;
+  font-family:'Montserrat';
+  font-weight: 600;
   /* font-size: 13px; */
 }
 
