--- a/src/styles/poster.css
+++ b/src/styles/poster.css
@@ -52,9 +52,11 @@
 
   }
 
-      h4 {
+      #spar {
         color:white;
         font-family: Oswald;
+        font-size: 35px;
+        height:45px;
       }
 
 #rr{
@@ -82,6 +84,8 @@ a.carousel-control-prev{
 a.carousel-control-next{
   justify-content: right;
   margin-right: 1%;
+  height: 60px;
+  margin-top: 11%;
 }
 
 #co{
@@ -115,19 +119,19 @@ a.carousel-control-next{
 
 }
 #txt{
-  margin-top: 9%;
+  margin-top: 6%;
   text-align: left;
 
 }
 
 #txt1{
-  margin-top: 9%;
+  margin-top: 6%;
   margin-left: 5%;
   text-align: left;
 }
 
 #txt2{
-  margin-top: 9%;
+  margin-top: 6%;
   margin-left: 5%;
   text-align: left;
 }
