--- a/src/styles/Psignin.css
+++ b/src/styles/Psignin.css
@@ -52,6 +52,8 @@ h3{
     background-color:#be911f;
     width: 100%;
     box-sizing: border-box;
+    border: none;
+    box-shadow: 1px 1px 1px black;
     border-radius: 5px;
     height: 50px;
     font-size: larger;
