--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -246,6 +246,8 @@ ul a:hover{
   text-decoration: dotted;
   /* display: inline-block; */
   border-style: none;
+  font-family:'Montserrat';
+  font-weight: 600;
   background-color:transparent;
   justify-content: space-around;
 }
