--- a/src/styles/Conland.css
+++ b/src/styles/Conland.css
@@ -62,11 +62,17 @@
     margin-bottom: 55px;
 } */
 
+#cxt{
+    color: #0e4d3b;
+    font-size: 19px;
+}
+
 #csbt,#csbt1{
     color: #fff;
     background-color:#0e4d3b;
     /* width: 35%; */
     box-sizing: inherit;
+    border-radius: 4px;
     border: none;
     box-shadow: 1px 1px 1px black;
     margin-top: 20px;
@@ -76,7 +82,7 @@
     text-decoration: none;
     /* height: 60px; */
     font-size: medium;
-    font-family:Exo;
+    font-family:Montserrat;
     /* float:right; */
     /* margin-top: 90px; */
     /* margin-right: -1.5%; */
@@ -134,4 +140,19 @@
     /* background-color: aliceblue; */
     margin-left: 16%;
     margin-right: 16%;
+}
+
+#csup{
+    font-family: Exo;
+    color:#0e4d3b;
+    font-size: 20px;
+    font-weight: bold;
+    line-height: 70px;
+}
+
+#cus{
+    text-align: center;
+    margin-bottom: 40px;
+    color: #0a382b;
+    font-size: 30px;
 }
