--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -21,17 +21,19 @@
     font-family: 'Oswald';
     color: black;
     font-size: 14px;
-    margin-left: 160px;
+    margin-left: -400px;
+    margin-right: 400px;
+    /* margin-left: 160px; */
 }
 
 #foot1{
     margin-top: 30px;
     text-align: center;
     font-weight: bold;
-    font-family: 'Oswald';
+    font-family: 'Montserrat';
     color: black;
     font-size: 14px;
-    margin-right: -1000px;
+    /* margin-right: -1000px; */
 }
 
 #foot2{
@@ -41,13 +43,15 @@
     font-family: 'Exo';
     color: black;
     font-size: 14px;
-    margin-left: -800px;
+    margin-left: -400px;
+    margin-right: 400px;
+    /* margin-left: -800px; */
 }
-.det{
+/* .det{
     color: #947200;
     font-weight: 300;
-    font-family: 'Oswald';
-}
+    font-family: Oswald;
+} */
 #copy{
     color: black;
     font-size: 12px;
@@ -56,4 +60,20 @@
 h6{
     font-weight: bold;
     font-size: 15px;
+}
+
+#ftli{
+    color: #947200;
+    font-weight: 300;
+    font-family: Oswald;
+    font-size: 16px;
+}
+
+#ftli:hover{
+    color: black;
+}
+
+#fthd{
+    font-family: Exo;
+    font-size: 17px;
 }
