--- a/src/styles/PlandSi.css
+++ b/src/styles/PlandSi.css
@@ -22,8 +22,8 @@
     border: 1px;
     padding: 10px;
     height:315px;
-    width: 650px;
-    margin-left: 4%;
+    /* width: 650px; */
+    /* margin-left: 4%; */
 
     /* height:340px; */
 }
@@ -37,7 +37,7 @@
     border-color: #115542;
     padding: 10px;
     margin-left: 5%;
-    width: 730px;
+    /* width: 730px; */
     /* height:340px; */
 }
 #rpl{
@@ -52,20 +52,43 @@
 
 #bt2{
     color: #fff;
-    background-color:#be911f;
+    background-color:#947200;
     /* width: 100%; */
     box-sizing: border-box;
     border-radius: 5px;
     border: none;
     box-shadow: 1px 1px 1px black;
-    /* height: 50px; */
+    height: 45px;
     font-size: 19px;
     font-family:Exo;
     margin-bottom: 5px;
+
+    -webkit-box-shadow: inset 0 0 30px rgb(85, 85, 87);
+    -moz-box-shadow: inset 0 0 30px rgb(32, 32, 32);
+    box-shadow: inset 0 0 30px rgb(63, 63, 63);
 }
 #ks1{
     height:340px;
    
+}
+
+svg{
+    margin-top:-4px;
+    margin-right: 4px;
+}
+
+#bt5{
+    color: #fff;
+    background-color:#0a382b;
+    width: 140px;
+    box-sizing: border-box;
+    border-radius: 5px;
+    border: none;
+    box-shadow: 1px 1px 1px black;
+    height: 50px;
+    font-size: 17px;
+    font-family:Exo;
+    margin-bottom: 5px;
 }
 
 .block1{
@@ -102,7 +125,7 @@
     float: left;
     width: 36%;
     padding: 0 0px;
-    margin-bottom: 5%;
+    margin-bottom: 2%;
 }
 
 #accCon{
@@ -114,6 +137,7 @@
     text-align: center;
     color: #be911f;
     font-family: Exo;
+    font-size: 30px;
 }
 
 #next{
