--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -42,12 +42,13 @@ box-sizing: border-box;
 border-style: groove;
 color: white;
 text-align: center;
-padding: 12px 23px;
+padding: 8px 23px;
+margin-top: 6px;
 text-decoration: none;
 font-family: Montserrat;
 letter-spacing: 1px;
 font-size: 14px;
-
+height: 40px;
 }
 
 li a:hover, .dropdown:hover .dropbtn {
@@ -65,7 +66,7 @@ background-color: #f9f9f9;
 min-width: 180px;
 box-shadow: 0px 8px 16px 0px rgba(238, 235, 235, 0.2);
 z-index: 1;
-font-size: medium;
+/* font-size: medium; */
 text-decoration: dotted;
 }
 
@@ -77,7 +78,7 @@ display: block;
 text-align: left;
 font-family: 'Exo';
 background-color: white;
-font-weight: 500;
+font-weight: 600;
 font-size: 16px;
 }
 
