--- a/src/styles/Conland.css
+++ b/src/styles/Conland.css
@@ -64,7 +64,8 @@
 
 #cxt{
     color: #0e4d3b;
-    font-size: 19px;
+    font-size: 14px;
+    text-align: justify;
 }
 
 #csbt,#csbt1{
@@ -152,7 +153,7 @@
 
 #cus{
     text-align: center;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     color: #0a382b;
     font-size: 30px;
 }
