--- a/src/styles/PlandSi.css
+++ b/src/styles/PlandSi.css
@@ -57,15 +57,15 @@
     box-sizing: border-box;
     border-radius: 5px;
     border: none;
-    box-shadow: 1px 1px 1px black;
+    /* box-shadow: 1px 1px 1px black; */
     height: 45px;
     font-size: 19px;
     font-family:Exo;
     margin-bottom: 5px;
 
-    -webkit-box-shadow: inset 0 0 30px rgb(85, 85, 87);
-    -moz-box-shadow: inset 0 0 30px rgb(32, 32, 32);
-    box-shadow: inset 0 0 30px rgb(63, 63, 63);
+    /* -webkit-box-shadow: inset 0 0 30px rgb(85, 85, 87);
+    -moz-box-shadow: inset 0 0 30px rgb(32, 32, 32); */
+    box-shadow: inset 0px 0px 4px black
 }
 #ks1{
     height:340px;
@@ -75,6 +75,7 @@
 svg{
     margin-top:-4px;
     margin-right: 4px;
+    font-size: 20px;
 }
 
 #bt5{
