--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -77,3 +77,17 @@ h6{
     font-family: Exo;
     font-size: 15px;
 }
+
+@media screen and (max-width: 500px) {
+    #foot2,#foot{
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+    #foot1, #foot{
+        width: 50%;
+    }
+    #foot2{
+        margin-left: 1%;
+        width: 100%;
+    }
+}
