--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -2,3 +2,9 @@
 }
 @media only screen and (max-width:500px){
 }
+
+#ConNo{
+    writing-mode: vertical-rl;
+  background-color: yellow;
+  inline-size: 110px;
+}
