--- a/src/styles/Cland.css
+++ b/src/styles/Cland.css
@@ -272,3 +272,169 @@ div.containernew1{
 #da{
     margin-left: -55%;
 }
+
+@media screen and (max-width:600px) {
+
+    .colmn{
+        width: 50%;
+    }
+
+    #clm{
+        margin-top: 10px;
+    }
+    .c1{
+        height: auto;
+        width: auto;
+        margin-left: 10px;
+    }
+
+    #xx{
+        line-height: 20px;
+        font-size: 10px;
+    }
+    
+    .block4{
+        height: 175px;;
+        width: 175px;
+        /* margin-left: 10px; */
+        margin-top: 0px;
+        float: right;
+    }
+    .block{
+        height: 165px;
+        width: 90%;
+        margin-left: 0px;
+        margin-top: 15px;
+        float: left;
+    }
+    #hd13{
+        font-size: 15px;
+    }
+
+    #kss{
+        max-width: fit-content;
+        line-height: 10px;
+        font-size: 8px;
+    }
+
+    #bt1{
+        width:fit-content;
+        height: fit-content;
+        margin-top: -7px;
+        font-size: 9px;
+        border-radius: 2px;
+        box-shadow: none;
+    }
+
+    .ch1{
+        width: 28%;
+        margin-left: 0px;
+        margin-top: 0px;
+    }
+    .cnew{
+        width: 72%;
+        margin-left: 0px;
+        margin-top: 15px;
+        margin-bottom: 15px;
+        font-size:10px;
+        line-height: 20px;
+        max-height: fit-content;
+    }
+    #clandcar{
+        margin-left: 0px;
+        margin-top: 0px;
+        height: 100px;
+        width: 100px;
+    }
+    .coln{
+        width: 50%;
+        
+    }
+    #chart{
+        width: 50%;
+        margin-top: 0px;
+        margin-right: 0px;
+        margin-left: 0px;
+        margin-bottom: 0px;
+    }
+    
+    .block3{
+        /* height: auto; */
+        width: auto;
+        margin-left: 0px;
+    }
+    #hd1{
+        font-size: 15px;
+    }
+    .ksss{
+        font-size: 10px;
+        max-width: fit-content;
+    }
+    #anlypic{
+        margin-top: 0px;
+        margin-left: 0px;
+        height: 200px;
+        width: 180px;
+    }
+    div.containernew1{
+        margin-left: 5px;
+    }
+    #bt3{
+        width: fit-content;
+        height: fit-content;
+        font-size: 10px;
+        border-radius: 3px;
+    }
+    #cland4con{
+        margin-bottom: 0px;
+    }
+
+    .c2{
+        margin-left: 10px;
+        padding-left: 10px;
+        max-height: fit-content;
+        font-size: 10px;
+        width: 57%;
+        line-height: 20px;
+        margin-bottom: 10px;
+    }
+    .ch{
+        margin-left: 0px;
+        margin-top: 0px;
+        width: 40%;
+    }
+    #barpic{
+        margin-left: 0px;
+        margin-top: 0px;
+        height: 150px;
+        width:150px
+    }
+    .block5{
+        height: 175px;
+        width: 180px;
+        margin-top: 0px;
+        float: right;
+    }
+    .nblock{
+        height: 165px;
+        width: 90%;
+        margin-left: 0px;
+        margin-top: 15px;
+        float: left;
+    }
+    .piccontainer{
+        margin-top: 0px;
+    }
+    #cland5con{
+        width: 33.3333%;
+        margin-bottom: 0px;
+    }
+    #ba,#dc,#da{
+        margin-top: auto;
+        margin-left: auto;
+        height: 80px;
+        width: 50%;
+        margin-right: auto;
+        /* align-items: center; */
+    }
+}
