--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -7,9 +7,10 @@
 }
 
 .logo{
-  margin-top: -6px;
-  margin-left: -60%;
+  margin-top: 8px;
+  margin-left: 10px;
 }
+
 
 @media only screen and (max-width:500px){
 #dd,#middle{
