--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -73,9 +73,12 @@ h6{
     color: black;
 }
 
-#fthd{
+#fthd,#fthd1{
     font-family: Exo;
     font-size: 15px;
+}
+#fthd1{
+    padding-left: 0px;
 }
 
 @media screen and (max-width: 500px) {
@@ -85,9 +88,24 @@ h6{
     }
     #foot1, #foot{
         width: 50%;
+        margin-top: 10px;
     }
     #foot2{
         margin-left: 1%;
         width: 100%;
+        margin-top: 10px;
+    }
+    #fthd{
+        font-size: 12px;
+    }
+    #fthd1{
+        font-size: 12px;
+        padding-left: 0px;
+    }
+    #ftli{
+        font-size: 10px;
+    }
+    #copy{
+        font-size: 10px;
     }
 }
