--- a/src/styles/poster.css
+++ b/src/styles/poster.css
@@ -62,8 +62,12 @@
       display: block;
       /* margin-bottom: 20px; */
     }
-
-    
+    #pr3{
+      margin-left: 140px;
+    }
+    #slr1{
+      padding: 5px;
+    }
 
   }
 
