--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -49,7 +49,6 @@ margin-top: 6px;
 text-decoration: none;
 font-family: Montserrat;
 letter-spacing: 1px;
-min-width: 161px;
 font-size: 14px;
 height: 40px;
 }
@@ -63,14 +62,15 @@ display: inline-block;
 
 }
 
+.dropbtn{
+  min-width: 181px;
+}
 .dropdown-content {
 display: none;
 position: absolute;
 background-color: white;
-min-width: 50px;
-box-shadow: 0px 8px 16px 0px rgba(238, 235, 235, 0.2);
+min-width: 181px;
 z-index: 1;
-/* font-size: medium; */
 text-decoration: dotted;
 }
 
@@ -101,7 +101,6 @@ display: block;
 
 .button {
 background-color: #ffff;
-/* opacity: 0.4; */
 border: none;
 color: white;
 padding: 16px 32px;
@@ -109,7 +108,6 @@ text-align: center;
 text-decoration: dotted;
 display: inline-block;
 font-size: 12px;
-/* margin: 4px 2px; */
 transition-duration: 0.4s;
 cursor: pointer;
 
@@ -125,37 +123,30 @@ color: white;
 
 #uld {
   padding-left: 0rem;
-  /* display: none; */
   text-decoration: none;
   padding-bottom: 0rem;
   display: inline;
   list-style-type: none;
   font-size: medium;
   color: #947200;
-/* padding: 12px 16px; */
-text-decoration: dotted;
-display: block;
-text-align: left;
-font-family: 'Exo';
-background-color: white;
-position: absolute;
-min-width: 15%;
-box-sizing: unset;
-
-
-
-    margin-block-start: 0em;
-    margin-block-end: 0em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    padding-inline-start: 0px; 
-  
+  text-decoration: dotted;
+  display: block;
+  text-align: left;
+  font-family: 'Exo';
+  background-color: white;
+  position: absolute;
+  min-width: 15%;
+  box-sizing: unset;
+  margin-block-start: 0em;
+  margin-block-end: 0em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 0px; 
 }
 
 .products-cat {
   position: initial;
   border: 3px solid transparent;
-  /* border-left-color: $themeColor; */
   margin-left: 1rem;
   max-height: 0;
 }
@@ -168,8 +159,6 @@ box-sizing: unset;
   max-height: initial;
 }
 
-
-
 ul {
   list-style: none;
   text-decoration: none;
@@ -181,11 +170,7 @@ ul {
 }
 ul a{
   text-decoration: dotted;
-  /* background-color: #000; */
   color: #fff;
-  /* padding: 20px 40px; */
-  /* padding: 10px 20px; */
-  /* font-weight: bold; */
 }
 
 ul a:hover{
@@ -198,13 +183,11 @@ ul a:hover{
   color: #947200;
   font-family:'Montserrat';
   font-weight: 600;
-  /* font-size: 13px; */
 }
 
 .bts1{
   color: #947200;
   text-decoration: dotted;
-  /* display: inline-block; */
   border-style: none;
   font-family:'Montserrat';
   font-weight: 600;
