--- a/src/styles/PlandSi.css
+++ b/src/styles/PlandSi.css
@@ -46,6 +46,13 @@
     border: 5px;
 }
 
+#slipic{
+    height: 100%;
+    width: 100%;
+    margin-left: 0px;
+    margin-top: 0px;
+}
+
 #bt2{
     color: #fff;
     background-color:#947200;
